--- a/BNS_Final/Views/Administrator/Confirm.cshtml
+++ b/BNS_Final/Views/Administrator/Confirm.cshtml
@@ -44,7 +44,7 @@
 
         @if (user.UserName != ViewBag.email)
         {
-            <h1>Nothing To Confirm</h1>
+            <h1>Nothing To Confirm 2</h1>
         }
 
     }
