--- a/BNS_Final/Views/Administrator/Confirm.cshtml
+++ b/BNS_Final/Views/Administrator/Confirm.cshtml
@@ -39,7 +39,7 @@
                class="btn btn-primary mb-3" style="width:auto">
                 Create New Account
             </a>
-            <a asp-action="ViewAll">Back to List</a>
+            <a asp-action="ViewAll">Back to </a>
         }
 
         @if (user.UserName != ViewBag.email)
