Customer details page adjustment removed avaliable balance

--- a/BNS_Final/Views/Administrator/Details.cshtml
+++ b/BNS_Final/Views/Administrator/Details.cshtml
@@ -25,8 +25,8 @@
         </div>
         <div class="card-body">
             <span>Balance:</span>  <h5 class="card-title"> @Html.DisplayFor(model => model.balance)</h5>
-            <span>Available:</span>  <h5 class="card-title"> @Html.DisplayFor(model => model.availableAmount)</h5>
-            <span>Card Number:</span> <h5 class="card-title"> @Html.DisplayFor(model => model.cardNum)</h5>
+@*            <span>Available:</span>  <h5 class="card-title"> @Html.DisplayFor(model => model.availableAmount)</h5>
+*@            <span>Card Number:</span> <h5 class="card-title"> @Html.DisplayFor(model => model.cardNum)</h5>
             <span>Account Type:</span> <h5 class="card-title"> @Html.DisplayFor(model => model.type)</h5>
         </div>
         <div class="card-footer">
