--- a/BNS_Final/Views/Home/Index.cshtml
+++ b/BNS_Final/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
 
 <!-- Background image -->
 <div class="bg-image"
-     style=" background-image: url('https://loopnewslive.blob.core.windows.net/liveimage/sites/default/files/2020-04/WWjw1oHvEN.jpg'); height: 400px; ">
+
+    style=" background-image: url('https://www.ivey.uwo.ca/imageGen.ashx?image=/media/3785932/winners_photos_001_cropped.jpg&width=1548&compression=80&constrain=true&format=jpeg'); height: 600px; ">
 
 </div>
 <!-- Background image -->
