Nav Bar changed, layout of create and list pages changed. login icon and landing page image changed

--- a/BNS_Final/Views/Home/Index.cshtml
+++ b/BNS_Final/Views/Home/Index.cshtml
@@ -3,9 +3,13 @@
 }
 
 
-<!-- Background image -->
+<!-- Background image --> 
+<div style="text-align: left">
+<h2>Bank Safe, Bank Secure!</h2>
+    </div>
 <div class="bg-image"
-     style=" background-image: url('https://loopnewslive.blob.core.windows.net/liveimage/sites/default/files/2020-04/WWjw1oHvEN.jpg'); height: 400px; ">
+     style=" background-image: url('https://i.ibb.co/Qpqh6Vr/Scotia-landing.png');  height: 400px; width:auto;  background-repeat:no-repeat; align-content:center " >
 
 </div>
-<!-- Background image -->
+
+<!-- Background image --> 
