--- a/BNS_Final/Views/Account/Login.cshtml
+++ b/BNS_Final/Views/Account/Login.cshtml
@@ -8,9 +8,13 @@
 
 <div class="myBackground">
     <h1 class="text-center"> User Login</h1>
-    <center><img src="~/Images/login.png" width="100" height="100" /></center>
+
+    <center><img src="https://i.ibb.co/NTTn5tH/Screenshot-2022-11-25-at-7-43-38-PM-removebg-preview.png" width="150" height="100" /></center>
+    
     <div class="row flex justify-content-center">
         <div class="col-md-4">
+
+
             <form method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -37,3 +41,8 @@
         </div>
     </div>
 </div>
+
+
+
+
+
