--- a/BNS_Final/Views/Administrator/ViewAllTeller.cshtml
+++ b/BNS_Final/Views/Administrator/ViewAllTeller.cshtml
@@ -16,23 +16,29 @@
 
     foreach (var user in Model)
     {
-        <div class="card mb-3">
-            <div class="card-header">
-                User Id: @user.Id
-            </div>
-            <div class="card-body">
-                <span>Username/Email:</span><h5 class="card-title">@user.UserName</h5>
-                <span>First Name:</span><h5 class="card-title">@user.FirstName</h5>
-                <span>Last Name:</span><h5 class="card-title">@user.LastName</h5>
-            </div>
-            <div class="card-footer">
-                <a class="btn btn-primary" asp-controller="Administrator" asp-action="TellerDetails" asp-route-id="@user.Id">View Account</a>
-            </div>
 
+        <table class="table table-hover table-light">
+            <thead>
+                <tr>
+                    <th scope="col">User ID</th>
+                    <th scope="col">Username</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">View</th>
+                </tr>
+            </thead>
+            <tbody>
 
+                <tr>
 
-
-        </div>
+                    <td> @user.Id</td>
+                    <td>@user.UserName</td>
+                    <td>@user.FirstName</td>
+                    <td>@user.LastName</td>
+                    <td><a class="btn btn-primary" asp-controller="Administrator" asp-action="TellerDetails" asp-route-id="@user.Id">View Account</a></td>
+                </tr>
+            </tbody>
+        </table>
     }
 }
 else
