--- a/BNS_Final/Views/Shared/_Layout.cshtml
+++ b/BNS_Final/Views/Shared/_Layout.cshtml
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+<body style="background-color:hotpink">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
+        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+            <br/>
+            <br/>
             <div class="container">
 
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/BNS1.png" height="40" width="70" /></a>
@@ -26,7 +27,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
 
 
@@ -155,7 +156,7 @@
                                 else
                                 {
                                     <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                                        <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
                                     </li>
                                 }
                             </ul>
@@ -190,3 +191,7 @@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
+
+
+
+
