edited layout of the customer trans, fixed grammical errors and incorrect labels for editid.cshtml. added table formats

--- a/BNS_Final/Views/Transactions/Index.cshtml
+++ b/BNS_Final/Views/Transactions/Index.cshtml
@@ -7,10 +7,10 @@
 <h1>Customer Transactions</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary mb-3" style="width:auto">Create New</a>
 </p>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-hover table-light">
     <thead>
         <tr>
             <th>
