--- a/BNS_Final/Views/Administrator/ViewAllTeller.cshtml
+++ b/BNS_Final/Views/Administrator/ViewAllTeller.cshtml
@@ -14,32 +14,58 @@
         Create New Account
     </a>
 
-    foreach (var user in Model)
-    {
 
-        <table class="table table-hover table-light">
-            <thead>
-                <tr>
-                    <th scope="col">User ID</th>
-                    <th scope="col">Username</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">View</th>
-                </tr>
-            </thead>
-            <tbody>
 
-                <tr>
+    <table class="table table-bordered table-hover table-light">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(user => user.Id)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(user => user.UserName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(user => user.FirstName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(user => user.LastName)
+                </th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
 
-                    <td> @user.Id</td>
-                    <td>@user.UserName</td>
-                    <td>@user.FirstName</td>
-                    <td>@user.LastName</td>
-                    <td><a class="btn btn-primary" asp-controller="Administrator" asp-action="TellerDetails" asp-route-id="@user.Id">View Account</a></td>
-                </tr>
-            </tbody>
-        </table>
-    }
+
+            @foreach (var user in Model)
+            {
+                
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => user.Id)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => user.UserName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => user.FirstName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => user.LastName)
+                        </td>
+                        <td>
+                            <a asp-controller="Administrator" asp-action="TellerDetails" asp-route-id="@user.Id">View Account</a>
+
+                        </td>
+                    </tr>
+                }
+
+            }
+
+        </tbody>
+
+
+    </table>
 }
 else
 {
