--- a/BNS_Final/Views/Shared/_Layout.cshtml
+++ b/BNS_Final/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body style="background-color:hotpink">
+<body style="background: radial-gradient(circle, rgba(199,61,159,0.6338797814207651) 23%, rgba(148,187,233,1) 100%); ">
     <header>
         <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
             <br/>
