--- a/BNS_Final/Views/Transactions/CustomerTrans.cshtml
+++ b/BNS_Final/Views/Transactions/CustomerTrans.cshtml
@@ -6,7 +6,7 @@
 
 <h1>All Your Transactions</h1>
 
-<p>Your Account Balance is: @TempData["Balance"]</p>
+<p>Your Account Balance is:<strong> $@TempData["Balance"]</strong></p> 
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -45,7 +45,7 @@
 
 
 
-<table class="table table-bordered">
+<table class="table table-bordered table-hover table-light">
     <thead>
         <tr>
             <th>
