--- a/BNS_Final/Views/Home/Index.cshtml
+++ b/BNS_Final/Views/Home/Index.cshtml
@@ -2,15 +2,23 @@
     ViewData["Title"] = "Home Page";
 }
 
-
+<link rel="stylesheet" type="text/css" href="~/css/LandingPage.css">
 <!-- Background image --> 
-<div style="text-align: left">
-<h2>Bank Safe, Bank Secure!</h2>
-    </div>
-<div class="bg-image"
-     style=" background-image: url('https://i.ibb.co/Qpqh6Vr/Scotia-landing.png');  height: 400px; width:auto;  background-repeat:no-repeat; align-content:center " >
 
+
+
+
+<div class="imgBg">
+    <div class="banner-title">
+        
+        <h1>Bank <strong>Safe</strong><br/> Bank <strong>Secure!</strong></h1>
+   
+
+
+    </div>
 </div>
+
+   
 
 <!-- Background image --> 
 
