--- a/BNS_Final/Views/Home/Index.cshtml
+++ b/BNS_Final/Views/Home/Index.cshtml
@@ -5,14 +5,14 @@
 <link rel="stylesheet" type="text/css" href="~/css/LandingPage.css">
 <!-- Background image --> 
 
-
+<link href="~/css/LandingPage.css" rel="stylesheet" />
 <!-- Background image -->
-<div class="bg-image"
+<div class="bg-image">
 
-    style=" background-image: url('https://www.ivey.uwo.ca/imageGen.ashx?image=/media/3785932/winners_photos_001_cropped.jpg&width=1548&compression=80&constrain=true&format=jpeg'); height: 600px; ">
+    @*style=" background-image: url('https://www.ivey.uwo.ca/imageGen.ashx?image=/media/3785932/winners_photos_001_cropped.jpg&width=1548&compression=80&constrain=true&format=jpeg'); height: 600px; ">*@
 
 
-
+</div>
 
 <div class="imgBg">
     <div class="banner-title">
